# monad-par-edi

./: .gitignore  LICENSE  README.md  monad-par.cabal
Control/Monad/Par/Scheds/: Edi.hs
